refactoring - introducing usecase- single usecase should contain single user journey through system. Extracted logic from app to http repo, increased coverage
